# aitest.arbitary-function-calling

./: .gitignore  ARCHITECTURE.md  BENCHMARKING.md  COMPARISON.md  Dockerfile  QUICKSTART.md  README.md  SUMMARY.md  benchmark.py  benchmark.sh  docker-compose.yml  package-lock.json  package.json  requirements-dev.txt  requirements.txt
.github/workflows/: benchmark.yml
nodejs-fastify/: Dockerfile  README.md  index.ts  package-lock.json
python-fastapi/: Dockerfile  README.md  requirements.txt
python-fastapi/src/: main.py
python-fastapi/tests/: test_execute.py
rust/: Cargo.toml  Dockerfile  README.md
rust-actix/: Cargo.toml  Dockerfile  README.md
rust-actix/src/: main.rs  main_old.rs
rust/src/: main.rs
src/: index.ts  main.py
tests/: README.md  execute.test.ts
wiremock/mappings/: data.json  post-data.json  todos.json  users.json
