[package]
name = "js-execution-service"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
rquickjs = { version = "0.10", features = ["array-buffer", "classes", "properties", "futures", "parallel"] }
log = "0.4"
env_logger = "0.11"
